# paperbound-pavilion

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  package-lock.json  package.json  pyproject.toml
locale/bn/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.po
src/: manage.py
src/accounts/: admin.py  forms.py  managers.py  mixins.py  models.py  permissions.json  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_alter_address_country.py  0003_alter_address_state.py  0004_alter_address_country.py  0005_address_deleted.py  0006_alter_user_email.py  0007_alter_address_city_alter_address_country_and_more.py  0008_customer_staff_alter_address_options_and_more.py  0009_alter_address_country.py  0010_alter_address_options_alter_user_options_and_more.py  0011_alter_address_options_alter_user_options.py
src/accounts/templates/: login.html  register.html
src/accounts/tests/: test_forms.py  test_models.py  test_views.py  utils.py
src/accounts/views/: auth_views.py  profile_views.py
src/book_review/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/book_review/migrations/: 0001_initial.py  0002_review_deleted.py  0003_alter_review_books_alter_review_comments_and_more.py  0004_alter_review_books.py  0005_alter_review_options.py  0006_alter_review_options.py
src/book_review/templates/: create_review.html  review_list_book.html  review_list_user.html  update_review.html
src/books/: admin.py  apps.py  choices.py  models.py  urls.py  utils.py  view_helpers.py  views.py
src/books/migrations/: 0001_initial.py  0002_alter_book_quantity.py  0003_alter_book_genre.py  0004_merge_20240319_0713.py  (+2 more)
src/core/: app.py  debugging.py  mixins.py  models.py
src/djadmin_customization/: apps.py  tests.py  utils.py  views.py
src/project/: celery.py  urls.py
src/root/: admin.py  apps.py  urls.py  views.py
src/shopping/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py
src/store_admin/: apps.py  forms.py  models.py  urls.py  views.py
static/css/: output.css
(+115 files in other folders)
