[tool.poetry]
name = "paperbound-pavilion"
version = "0.1.0"
description = ""
authors = ["Ahmed Symum Swapno"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
django-split-settings = "^1.2.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
django-countries = "^7.5.1"
pip = "^24.0"
install = "^1.3.5"
sslcommerz-lib = "^1.0"
celery = "^5.3.6"
redis = "^5.0.3"
reportlab = "^4.1.0"
django-silk = "^5.1.0"
django-redis = "^5.4.0"
faker = "^24.3.0"
django-unfold = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
autoflake = "^2.3.1"
aiosmtpd = "^1.4.5"

[tool.isort]
line_length = 79
multi_line_output = 5

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 79
dedent_closing_brackets = true


[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
exclude = [
    '**\migrations\*.py',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
